--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Delivery | MyFoodDeliver.com</title>
+    <title>Crop Monitoring</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" media= "screen and (max-width: 1150px)" href="css/phone.css"> -->
     <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
